--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portafolio franko luarte</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/35c4a791cd.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
@@ -46,7 +46,7 @@
     
 
       <div class="banner-presentacion d-flex justify-content-evenly">
-        <img src="asset/programador-web.jpg " width="600px" height="300px" class="banner-header m-4 col-4">
+        <img src="assets/img/programador-web.jpg" width="600px" height="300px" class="banner-header m-4 col-4">
 
         <p class="texto-biblio col-6">¡Hola! Soy FRANKO LUARTE, un estudiante apasionado de desarrollo y programacion web. Me complace presentarte algunos de mis proyectos en los que he estado trabajando y que reflejan mi dedicación y habilidades en esta área. A continuación, te presento cinco de mis proyectos destacados en los que he trabajado utilizando HTML, CSS, Flexbox, Bootstrap y GitHub. Mi pasión por la tecnología y el aprendizaje constante me impulsa a seguir explorando nuevas oportunidades en el ámbito del desarrollo web. Me considero un estudiante entusiasta y comprometido que está dispuesto a enfrentar nuevos desafíos y aprovechar al máximo mi diversa formación para contribuir en proyectos innovadores.</p>
       </div>
@@ -56,7 +56,7 @@
 <div class="row d-flex justify-content-evenly m-4 ">
     
       <div class="card m-2" style="width: 18rem;">
-  <img src="asset/programador-web-cartagena-1024x493.jpg" class="card-img-top" alt="...">
+  <img src="assets/img/programador-web-cartagena-1024x493.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">desarrollos web</h5>
     <p class="card-text"> Diseñé y desarrollé mi propio sitio web personal para mostrar mi experiencia y habilidades. Utilicé HTML y CSS para crear una interfaz atractiva y funcional, y aproveché Flexbox para lograr un diseño flexible y adaptable. Puedes encontrar el código fuente y el sitio en mi repositorio de GitHub.</p>
@@ -66,7 +66,7 @@
 
 
 <div class="card m-2" style="width: 18rem;">
-  <img src="asset/hobbies-pesca-e1659236930689.jpg" class="card-img-top" alt="...">
+  <img src="assets/img/hobbies-pesca-e1659236930689.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">hobbis</h5>
     <p class="card-text">Además de la pesca y la caza, disfruto mucho de las actividades al aire libre en general. Salir a acampar, hacer senderismo o montar en bicicleta son actividades que me permiten explorar nuevos lugares y disfrutar de la belleza de la naturaleza. Estar al aire libre me ayuda a desconectar del ajetreo diario y recargar energías.</p>
@@ -77,7 +77,7 @@
 
  
 <div class="card  m-2" style="width: 18rem;">
-  <img src="asset/estudios.jpg" class="card-img-top" alt="...">
+  <img src="assets/img/estudios.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">estudios</h5>
     <p class="card-text">un estudiante apasionado y multifacético con experiencia en varias disciplinas. Mi formación abarca tres áreas principales:</p>
@@ -90,7 +90,7 @@
   </div>
 </div> 
 <div class="card m-2" style="width: 18rem;">
-  <img src="asset/labor-day.jpg" class="card-img-top" alt="...">
+  <img src="assets/img/labor-day.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">experiencia laboral</h5>
     <p class="card-text experiencia">En resumen, mi experiencia laboral abarca el cuidado de pacientes como Técnico de Enfermería, la realización de trabajos eléctricos en entornos industriales como Electricista Industrial y el desarrollo y programación de aplicaciones web como Desarrollador Web. Estas experiencias me han proporcionado un conjunto diverso de habilidades y conocimientos en diferentes campos, lo que me permite adaptarme a diversos entornos laborales y desafíos profesionales.</p>
@@ -113,7 +113,7 @@
 
   <div class="emoticones">
     <a href="https://desafiolatam.com/" target="_blank" class="">
-      <img src="asset/desafio latam.png" class="banner-header m-4" width="300px" height="150px">
+      <img src="assets/img/desafio latam.png" class="banner-header m-4" width="300px" height="150px">
     </a></div>
    
 <div>
