Centré verticalmente elementos del footer

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 
 
-<footer >
+<footer class="container-fluid d-flex align-items-center">
    <div class="texto-blanco">
     <ul>
       <li><i class="fa-solid fa-envelope"></i> contacto</a></li>
